--- a/SharpCast/SharpCastLib.csproj
+++ b/SharpCast/SharpCastLib.csproj
@@ -7,6 +7,8 @@
     <Description>fork from</Description>
     <PackageProjectUrl>https://github.com/jpepiot/SharpCast</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ScorpioPlayer/SharpCast</RepositoryUrl>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
